k8s/apps/default/qbittorrent/envoy/resources/envoy.yaml
static_resources:
  listeners:
    - name: qbittorrent_envoy_https_egress
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15006
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                  tls_maximum_protocol_version: TLSv1_3
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/tls/tls.crt
                    private_key:
                      filename: /etc/envoy/tls/tls.key
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: qbittorrent_envoy_https_egress
                generate_request_id: false
                use_remote_address: false
                skip_xff_append: true
                normalize_path: false
                merge_slashes: false
                path_with_escaped_slashes_action: KEEP_UNCHANGED
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        text_format_source:
                          inline_string: "[%START_TIME%] \"%REQ(:METHOD)% https://%REQ(:AUTHORITY)% %PROTOCOL%\" %RESPONSE_CODE% %BYTES_SENT% %DURATION% upstream=%UPSTREAM_HOST% upstream_proto=%UPSTREAM_PROTOCOL% cluster=%UPSTREAM_CLUSTER% flags=%RESPONSE_FLAGS% upstream_failure=%UPSTREAM_TRANSPORT_FAILURE_REASON%\n"
                route_config:
                  name: qbittorrent_envoy_https_egress
                  virtual_hosts:
                    - name: any
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          request_headers_to_remove:
                            - x-forwarded-for
                            - x-forwarded-proto
                            - x-request-id
                            - x-envoy-expected-rq-timeout-ms
                            - x-envoy-original-host
                            - x-envoy-internal
                            - x-envoy-attempt-count
                          route:
                            cluster: dynamic_forward_proxy_cluster
                            timeout: 120s
                            retry_policy:
                              retry_on: connect-failure,reset,refused-stream
                              num_retries: 2
                              per_try_timeout: 10s
                http_filters:
                  - name: envoy.filters.http.dynamic_forward_proxy
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                      dns_cache_config:
                        name: qbittorrent_envoy_dns_cache
                        dns_lookup_family: V4_ONLY
                  - name: envoy.filters.http.tap
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
                      common_config:
                        admin_config:
                          config_id: qbittorrent-envoy-tap
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppress_envoy_headers: true
  clusters:
    - name: dynamic_forward_proxy_cluster
      connect_timeout: 10s
      lb_policy: CLUSTER_PROVIDED
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 50
            max_pending_requests: 1000
            max_requests: 1000
            max_retries: 3
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          dns_cache_config:
            name: qbittorrent_envoy_dns_cache
            dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          auto_config:
            http2_protocol_options:
              max_concurrent_streams: 500
            http_protocol_options: {}
          upstream_http_protocol_options:
            auto_sni: true
            auto_san_validation: true
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols:
              - h2
              - http/1.1
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            validation_context:
              trusted_ca:
                filename: /etc/ssl/certs/ca-certificates.crt
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
